@@ -1,12 +1,12 @@
 package com.bookverse.development.packapps.apps.services;
 
 import java.awt.Desktop;
-import java.net.URL;
+import java.net.URI;
+import java.util.Objects;
 import javax.swing.JComboBox;
 import javax.swing.JDialog;
 import javax.swing.JTextArea;
 import javax.swing.JTextField;
-
 import com.bookverse.development.packapps.apps.utils.other.GeneralUtils;
 import com.bookverse.development.packapps.apps.utils.constants.ArrayData;
 import com.bookverse.development.packapps.apps.utils.ui.Alerts;
@@ -20,20 +20,19 @@ public final class WhatsAppService {
     Effects.fadeOut(parent);
   }
 
-  public static void clickOnOpen(JTextField number, JComboBox<String> listCountry,
-      JTextArea message) {
+  public static void clickOnOpen(JTextField number, JComboBox<String> listCountry, JTextArea message) {
 
     if (GeneralUtils.verifyConnection("Connect to see more!", true)) {
 
       if (number.getText().length() >= 8) {
 
-        if (!"Select country".equals(listCountry.getSelectedItem().toString())) {
+        if (!"Select country".equals(Objects.requireNonNull(listCountry.getSelectedItem()).toString())) {
 
           try {
-            Desktop.getDesktop().browse(new URL(
+            Desktop.getDesktop().browse(URI.create(
                 "https://web.whatsapp.com/send?phone=" + ArrayData.getCountryCode(
                     listCountry.getSelectedItem().toString()) + number.getText()
-                    + "&text=" + message.getText().replaceAll("\\s", "+")).toURI());
+                    + "&text=" + message.getText().replaceAll("\\s", "+")));
           } catch (Exception ex) {
             Alerts.error(ex, "Opening URL");
           }
